--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
   </head>
   <body>
     <div class="wrapper">
-      <div id="score">0</div>
+      <div class="bar">
+        <div id="score">SCORE: 0</div>
+        <button class="changeSpeed" onclick="changeSpeed(0.5, 0)">0.5</button>
+        <button class="changeSpeed changeSpeed-active" onclick="changeSpeed(1, 1)">1.0</button>
+        <button class="changeSpeed" onclick="changeSpeed(1.5, 2)">1.5</button>
+        <button class="changeSpeed" onclick="changeSpeed(2, 3)">2.0</button>
+      </div>
       <canvas id="game" width="608" height="608"></canvas>
     </div>
     <script src="script.js"></script>
